# avancevl-interview

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  import.py  japanese_cousine.csv  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  service-account.json
api/: admin.py  models.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20200307_0216.py  0003_auto_20200307_0225.py  0004_auto_20200307_0226.py  0005_auto_20200307_0321.py  0006_auto_20200307_0333.py
assets/js/: FixedMenu.jsx  UpperMenu.jsx  semantic_layout.jsx
my_django_react_template/: settings.py  urls.py  wsgi.py
templates/: index.html
