[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["davidtnfsh <davidtnfsh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pylint = "^2.4.4"
isort = "^4.3.21"
mypy = "^0.761"
pytest = "^5.3.5"
black = "^19.10b0"
django-bower = "^5.2.0"
django-cors-headers = "2.4.0"
django = "1.9.*"
django-webpack-loader = "^0.7.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pycodestyle = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
